--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script>
-    sessionStorage.redirect = location.href;
+    // sessionStorage.redirect = location.href;
   </script>
   <!-- <meta http-equiv="refresh" content="0;URL='/surveyFront/'"></meta>   -->
 </head>
