deploy: 81b745effb36f0138be54beb9d931d4a80ef42ab

--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <script>
-    // sessionStorage.redirect = location.href;
+    sessionStorage.redirect = location.href;
   </script>
-  <!-- <meta http-equiv="refresh" content="0;URL='/surveyFront/'"></meta>   -->
+  <meta http-equiv="refresh" content="0;URL='/surveyFront/'"></meta>  
 </head>
 <body>
   <h1>是有沒有</h1>
