--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <script>
     sessionStorage.redirect = location.href;
   </script>
-  <meta http-equiv="refresh" content="0;URL='/'"></meta>  
+  <meta http-equiv="refresh" content="0;URL='/surveyFront/'"></meta>  
 </head>
 <body>
   <h1>是有沒有</h1>
